# what-makes-good-rm

./: README.md  pyproject.toml
src/: main.py  main_data.py
src/accelerate_configs/: deepspeed3.yaml
src/experiments_configs/Section4.1/pg/: pythia_2-8b_rloo_alpaca_sft_config.yaml  pythia_2-8b_rloo_alpaca_sft_ground_truth_reward_config.yaml
src/experiments_configs/Section4.1/pref_data/: pref_data_pythia_2-8b_alpaca_sft_onpolicy_relabel_uf_config.yaml
src/experiments_configs/Section4.1/rm_eval/: pythia_2-8b_sft_alpaca_rm_eval_config.yaml
src/experiments_configs/Section4.1/rm_train/: pythia_2-8b_rm_train_0p_config.yaml  pythia_2-8b_rm_train_100p_config.yaml  pythia_2-8b_rm_train_25p_config.yaml  pythia_2-8b_rm_train_50p_config.yaml  pythia_2-8b_rm_train_75p_config.yaml
src/experiments_configs/Section4.1/sft/: pythia_2-8b_sft_alpaca_config.yaml
src/experiments_configs/Section4.2/pg/: llama_1b_instruct_rloo_config.yaml  llama_1b_rloo_uf_sft_config.yaml  pythia_1b_rloo_uf_sft_config.yaml
src/experiments_configs/Section4.2/rm_eval/: llama_1b_instruct_open_rms_eval_config.yaml  llama_1b_sft_uf_open_rms_eval_config.yaml  pythia_1b_sft_uf_open_rms_eval_config.yaml
src/experiments_configs/pref_data/: pref_data_relabel_uf_config.yaml
src/what_makes_good_rm/Arguments/: __init__.py  arg_utils.py  args.py  data_args.py
src/what_makes_good_rm/Data/: __init__.py  preference_dataset_creator.py  registry.py
src/what_makes_good_rm/Recipes/: __init__.py  base_recipe.py
src/what_makes_good_rm/Utils/: __init__.py  logger.py  sharedmisc.py  strings.py
(+18 files in other folders)
